--- a/readme
+++ b/readme
@@ -6,3 +6,11 @@
 - 📫 How to reach me +91 8780570242/mohitbhadra18@gmail.com
 - 😄 Pronouns: Human
 - ⚡ Fun fact: Yet to come
+
+🛠️ Technologies & Tools
+Here are some of the technologies and tools I work with:
+
+Languages: C, C++, C#, Python, Java, JavaScript, Dart
+Frameworks: ReactJS, AnguklarJS, ASP .NET, Flutter
+Tools: Git, GitLab, Visual Studio, API Postman, VS Code
+
